--- a/index.html
+++ b/index.html
@@ -329,13 +329,12 @@
                                     <option value="3" disabled="">A disabled option</option>
                                     <option value="4">Potato</option>
                                 </select>
-                                <div class="nice-select" tabindex="0"><span class="current">Export</span>
+                                <div class="nice-select" tabindex="0"><span class="current">30 Days</span>
                                     <ul class="list">
-                                        <li data-value="Default Sorting" data-display="Export" class="option selected">Default Sorting</li>
-                                        <li data-value="1" class="option">Some option</li>
-                                        <li data-value="2" class="option">Another option</li>
-                                        <li data-value="3" class="option disabled">A disabled option</li>
-                                        <li data-value="4" class="option">Potato</li>
+                                        <li data-value="Default Sorting" data-display="30 Days" class="option selected">30 Days</li>
+                                        <li data-value="1" class="option">60 Dayes</li>
+                                        <li data-value="2" class="option">10 Week</li>
+                                        <li data-value="4" class="option">6 Month</li>
                                     </ul>
                                 </div>
                             </div>
@@ -824,10 +823,9 @@
                                             <div class="nice-select" tabindex="0"><span class="current">This Week</span>
                                                 <ul class="list">
                                                     <li data-value="Default Sorting" data-display="This Week" class="option selected">Default Sorting</li>
-                                                    <li data-value="1" class="option">Some option</li>
-                                                    <li data-value="2" class="option">Another option</li>
-                                                    <li data-value="3" class="option disabled">A disabled option</li>
-                                                    <li data-value="4" class="option">Potato</li>
+                                                    <li data-value="1" class="option">Last Week</li>
+                                                    <li data-value="2" class="option">3 Month</li>
+                                                    <li data-value="4" class="option">6 Month</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -958,13 +956,12 @@
                                                 <option value="3" disabled="">A disabled option</option>
                                                 <option value="4">Potato</option>
                                             </select>
-                                            <div class="nice-select" tabindex="0"><span class="current">View all</span>
+                                            <div class="nice-select" tabindex="0"><span class="current">last Week</span>
                                                 <ul class="list">
-                                                    <li data-value="Default Sorting" data-display="View all" class="option selected">Default Sorting</li>
-                                                    <li data-value="1" class="option">Some option</li>
-                                                    <li data-value="2" class="option">Another option</li>
-                                                    <li data-value="3" class="option disabled">A disabled option</li>
-                                                    <li data-value="4" class="option">Potato</li>
+                                                    <li data-value="Default Sorting" data-display="last Week" class="option selected">Last Week</li>
+                                                    <li data-value="1" class="option">1 Month</li>
+                                                    <li data-value="2" class="option">3 Month</li>
+                                                    <li data-value="4" class="option">6 Month</li>
                                                 </ul>
                                             </div>
                                         </div>
