--- a/vendor-grid.html
+++ b/vendor-grid.html
@@ -336,7 +336,7 @@
                     </form>
                 </div>
                 <!-- vendor-grid-top-area end -->
-                 <div class="row mt--10 g-5">
+                 <div class="row mt--10 g-xl-5 g-lg-4 g-4">
                     <div class="col-xxl-3 col-xl-4 col-lg-6 col-md-6 col-sm-6 col-12">
                         <div class="single-vendor-area">
                             <div class="logo-vendor">
