--- a/vendor-list.html
+++ b/vendor-list.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet preload" href="assets/css/style.css" as="style">
 </head>
     <!-- rts header area end -->
-<body>
+<body class="vendor-list-p">
     
     <div class="ekomart_dashboard">
 
