--- a/order.html
+++ b/order.html
@@ -321,20 +321,12 @@
                         <h3 class="title">Overview</h3>
                         <div class="button-wrapper">
                             <div class="single-select">
-                                <select style="display: none;">
-                                    <option data-display="Export">Export</option>
-                                    <option value="1">Some option</option>
-                                    <option value="2">Another option</option>
-                                    <option value="3" disabled="">A disabled option</option>
-                                    <option value="4">Potato</option>
-                                </select>
-                                <div class="nice-select" tabindex="0"><span class="current">Export</span>
+                                <div class="nice-select" tabindex="0"><span class="current">Last Week</span>
                                     <ul class="list">
-                                        <li data-value="Default Sorting" data-display="Export" class="option selected">Default Sorting</li>
-                                        <li data-value="1" class="option">Some option</li>
-                                        <li data-value="2" class="option">Another option</li>
-                                        <li data-value="3" class="option disabled">A disabled option</li>
-                                        <li data-value="4" class="option">Potato</li>
+                                        <li data-value="Default Sorting" data-display="Last Week" class="option selected">Last Week</li>
+                                        <li data-value="1" class="option">2 Week</li>
+                                        <li data-value="2" class="option">One Month</li>
+                                        <li data-value="4" class="option">6 month</li>
                                     </ul>
                                 </div>
                             </div>
