--- a/vendor-details.html
+++ b/vendor-details.html
@@ -404,14 +404,8 @@
                                 </form>
                             </div>
                             <div class="single-select">
-                                <select style="display: none;">
-                                    <option data-display="All Categories">Default Sorting</option>
-                                    <option value="1">Some option</option>
-                                    <option value="2">Another option</option>
-                                    <option value="3" disabled="">A disabled option</option>
-                                    <option value="4">Potato</option>
-                                </select>
-                                <div class="nice-select" tabindex="0"><span class="current">All Categories</span>
+                                <div class="nice-select" tabindex="0">
+                                    <span class="current">All Categories</span>
                                     <ul class="list">
                                         <li data-value="Default Sorting" data-display="All Categories" class="option selected">Default Sorting</li>
                                         <li data-value="1" class="option">Some option</li>
