add review and brand

--- a/log-in.html
+++ b/log-in.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- rts header area start -->
-
-<head>
-
+    <!-- rts header area start -->
+    <head>
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Ekomart-Grocery-Store(e-Commerce) HTML Template: A sleek, responsive, and user-friendly HTML template designed for online grocery stores.">
@@ -15,113 +13,120 @@
         <link rel="stylesheet preload" href="assets/css/plugins.css" as="style">
         <link rel="stylesheet preload" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" as="style">
         <link rel="stylesheet preload" href="assets/css/style.css" as="style">
-    </head>
+</head>
     <!-- rts header area end -->
-
 <body>
-
+    
     <div class="ekomart_dashboard">
 
         <!-- rts header area start -->
         <div class="sidebar_left">
-            <a href="index.html" class="logo">
-                <img src="assets/images/logo/logo.svg" alt="logo" height="32" width="131">
+    <a href="index.html" class="logo">
+        <img src="assets/images/logo/logo.svg" alt="logo" height="32" width="131">
+    </a>
+    
+
+    <!-- nav area start -->
+     <ul class="rts-side-nav-area-left menu-active-parent">
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="#" class="with-plus">
+                <img src="assets/images/icons/01.svg" alt="icon" class="icon">
+                <p>Dashboard</p>
             </a>
-
-
-            <!-- nav area start -->
-            <ul class="rts-side-nav-area-left menu-active-parent">
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="#" class="with-plus">
-                        <img src="assets/images/icons/01.svg" alt="icon" class="icon">
-                        <p>Dashboard</p>
-                    </a>
-                    <ul class="submenu mm-collapse parent-nav">
-                        <li><a class="mobile-menu-link" href="index.html">Mian Demo</a></li>
-                        <li><a class="mobile-menu-link" href="#">Coming Soon</a></li>
-                    </ul>
-                </li>
-                <!-- signle menu item -->
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="#" class="with-plus">
-                        <img src="assets/images/icons/09.svg" alt="icon" class="icon">
-                        <p>Order</p>
-                    </a>
-                    <ul class="submenu mm-collapse parent-nav">
-                        <li><a class="mobile-menu-link" href="order.html">Order</a></li>
-                        <li><a class="mobile-menu-link" href="order-details.html">Order Details</a></li>
-                    </ul>
-                </li>
-                <!-- signle menu item -->
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="#" class="with-plus">
-                        <img src="assets/images/icons/02.svg" alt="icon" class="icon">
-                        <p>Product</p>
-                    </a>
-                    <ul class="submenu mm-collapse parent-nav">
-                        <li><a class="mobile-menu-link" href="product-list.html">product List</a></li>
-                    </ul>
-                </li>
-                <!-- signle menu item -->
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="#" class="with-plus">
-                        <img src="assets/images/icons/03.svg" alt="icon" class="icon">
-                        <p>Add Product</p>
-                    </a>
-                    <ul class="submenu mm-collapse">
-                        <li><a class="mobile-menu-link" href="add-product.html">Add Product</a></li>
-                    </ul>
-                </li>
-                <!-- signle menu item -->
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="#" class="with-plus">
-                        <img src="assets/images/icons/04.svg" alt="icon" class="icon">
-                        <p>Vendor</p>
-                    </a>
-                    <ul class="submenu mm-collapse parent-nav">
-                        <li><a class="mobile-menu-link" href="vendor-grid.html">Vendor Grid</a></li>
-                        <li><a class="mobile-menu-link" href="vendor-list.html">Vendor List</a></li>
-                        <li><a class="mobile-menu-link" href="vendor-details.html">Vendor Details</a></li>
-                    </ul>
-                </li>
-                <!-- signle menu item -->
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="transaction.html">
-                        <img src="assets/images/icons/06.svg" alt="icon" class="icon">
-                        <p>Transactions</p>
-                    </a>
-                </li>
-                <!-- signle menu item -->
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="#">
-                        <img src="assets/images/icons/07.svg" alt="icon" class="icon">
-                        <p>Reviews</p>
-                    </a>
-                </li>
-                <!-- signle menu item -->
-                <!-- single menu item -->
-                <li class="single-menu-item">
-                    <a href="#" class="with-plus">
-                        <img src="assets/images/icons/05.svg" alt="icon" class="icon">
-                        <p>User Profile</p>
-                    </a>
-                    <ul class="submenu mm-collapse parent-nav">
-                        <li><a class="mobile-menu-link" href="profile-setting.html">Profile Setting</a></li>
-                        <li><a class="mobile-menu-link" href="log-in.html">Log In</a></li>
-                        <li><a class="mobile-menu-link" href="registration.html">Registration</a></li>
-                    </ul>
-                </li>
-                <!-- signle menu item -->
+            <ul class="submenu mm-collapse parent-nav">
+                <li><a class="mobile-menu-link" href="index.html">Mian Demo</a></li>
+                <li><a class="mobile-menu-link" href="#">Coming Soon</a></li>
             </ul>
-            <!-- nav area end -->
-        </div>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="#" class="with-plus">
+                <img src="assets/images/icons/09.svg" alt="icon" class="icon">
+                <p>Order</p>
+            </a>
+            <ul class="submenu mm-collapse parent-nav">
+                <li><a class="mobile-menu-link" href="order.html">Order</a></li>
+                <li><a class="mobile-menu-link" href="order-details.html">Order Details</a></li>
+            </ul>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="#" class="with-plus">
+                <img src="assets/images/icons/02.svg" alt="icon" class="icon">
+                <p>Product</p>
+            </a>
+            <ul class="submenu mm-collapse parent-nav">
+                <li><a class="mobile-menu-link" href="product-list.html">product List</a></li>
+            </ul>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="#" class="with-plus">
+                <img src="assets/images/icons/03.svg" alt="icon" class="icon">
+                <p>Add Product</p>
+            </a>
+            <ul class="submenu mm-collapse">
+                <li><a class="mobile-menu-link" href="add-product.html">Add Product</a></li>
+            </ul>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="#" class="with-plus">
+                <img src="assets/images/icons/04.svg" alt="icon" class="icon">
+                <p>Vendor</p>
+            </a>
+            <ul class="submenu mm-collapse parent-nav">
+                <li><a class="mobile-menu-link" href="vendor-grid.html">Vendor Grid</a></li>
+                <li><a class="mobile-menu-link" href="vendor-list.html">Vendor List</a></li>
+                <li><a class="mobile-menu-link" href="vendor-details.html">Vendor Details</a></li>
+            </ul>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="transaction.html">
+                <img src="assets/images/icons/06.svg" alt="icon" class="icon">
+                <p>Transactions</p>
+            </a>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="review.html">
+                <img src="assets/images/icons/07.svg" alt="icon" class="icon">
+                <p>Reviews</p>
+            </a>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="brand.html">
+                <img src="assets/images/icons/16.svg" alt="icon" class="icon">
+                <p>Brand</p>
+            </a>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="#" class="with-plus">
+                <img src="assets/images/icons/05.svg" alt="icon" class="icon">
+                <p>User Profile</p>
+            </a>
+            <ul class="submenu mm-collapse parent-nav">
+                <li><a class="mobile-menu-link" href="profile-setting.html">Profile Setting</a></li>
+                <li><a class="mobile-menu-link" href="log-in.html">Log In</a></li>
+                <li><a class="mobile-menu-link" href="registration.html">Registration</a></li>
+            </ul>
+        </li>
+        <!-- signle menu item -->
+     </ul>
+    <!-- nav area end -->
+</div>
         <!-- rts header area end -->
 
         <div class="right-area-body-content">
@@ -277,9 +282,9 @@
                                 <div class="user_body_content">
                                     <ul class="items">
                                         <li class="single_items">
-                                            <a class="hader_popup_link" href="profile.html">
+                                            <a class="hader_popup_link" href="profile-setting.html">
                                                 <i class="fa-light fa-user"></i>
-                                                Profile
+                                                Profile Setting
                                             </a>
                                         </li>
                                         <li class="single_items">
@@ -359,109 +364,108 @@
 
 
 
-    <!-- rts header area start -->
+  <!-- rts header area start -->
+  
+
+
+<!-- progress area start -->
+<div class="progress-wrap active-progress">
+    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+        <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" style="transition: stroke-dashoffset 10ms linear 0s; stroke-dasharray: 307.919, 307.919; stroke-dashoffset: 307.919;"></path>
+    </svg>
+</div>
+<!-- progress area end -->
 
 
 
-    <!-- progress area start -->
-    <div class="progress-wrap active-progress">
-        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" style="transition: stroke-dashoffset 10ms linear 0s; stroke-dasharray: 307.919, 307.919; stroke-dashoffset: 307.919;"></path>
-        </svg>
-    </div>
-    <!-- progress area end -->
 
-
-
-
-    <div class="search-input-area">
-        <div class="container">
-            <div class="search-input-inner">
-                <div class="input-div">
-                    <input class="search-input autocomplete ui-autocomplete-input" type="text" placeholder="Search by keyword or #" autocomplete="off">
-                    <button><i class="far fa-search"></i></button>
-                </div>
+<div class="search-input-area">
+    <div class="container">
+        <div class="search-input-inner">
+            <div class="input-div">
+                <input class="search-input autocomplete ui-autocomplete-input" type="text" placeholder="Search by keyword or #" autocomplete="off">
+                <button><i class="far fa-search"></i></button>
             </div>
         </div>
-        <div id="close" class="search-close-icon"><i class="far fa-times"></i></div>
     </div>
+    <div id="close" class="search-close-icon"><i class="far fa-times"></i></div>
+</div>
 
 
-    <div id="anywhere-home"></div>
+<div id="anywhere-home"></div>
 
-    <div id="side-bar" class="side-bar header-two right-collups-add-product">
-        <button class="close-icon-menu"><i class="far fa-times"></i></button>
-        <!-- inner menu area desktop start -->
-        <div class="right-collups-area-top">
-            <h6 class="title">Add New Product</h6>
-            <p>Add information and add new product</p>
+<div id="side-bar" class="side-bar header-two right-collups-add-product">
+    <button class="close-icon-menu"><i class="far fa-times"></i></button>
+    <!-- inner menu area desktop start -->
+    <div class="right-collups-area-top">
+        <h6 class="title">Add New Product</h6>
+        <p>Add information and add new product</p>
+    </div>
+    <div class="input-main-wrapper">
+        <div class="single-input">
+            <label for="one">Product Name</label>
+            <input type="text" id="one" placeholder="Quaker Oats Healthy Meal...">
         </div>
-        <div class="input-main-wrapper">
-            <div class="single-input">
-                <label for="one">Product Name</label>
-                <input type="text" id="one" placeholder="Quaker Oats Healthy Meal...">
-            </div>
-            <div class="single-input">
-                <label for="Two">Regular Price</label>
-                <input type="text" id="Two" placeholder="240">
-            </div>
-            <div class="single-input">
-                <label for="sale">Sale Price</label>
-                <input type="text" id="sale" placeholder="$250">
-            </div>
-            <div class="single-input">
-                <label for="Stock">Stock</label>
-                <input type="text" id="Stock" placeholder="530">
-            </div>
-            <div class="single-input">
-                <label for="sku">SKU</label>
-                <input type="text" id="sku" placeholder="3245">
-            </div>
-            <div class="single-input">
-                <label for="cate">Category</label>
-                <input type="text" id="cate" placeholder="Notebook">
-            </div>
-            <div class="single-input">
-                <label for="Tag">Tag</label>
-                <input type="text" id="Tag" placeholder="Iphone, Mobile">
-            </div>
-            <div class="single-input">
-                <label for="text">Description</label>
-                <textarea name="text" id="text" placeholder="Type something"></textarea>
-            </div>
-            <div class="single-input">
-                <div class="file-upload-add-product">
-                    <div class="profile-left">
-                        <div class="profile-image mb--30">
-                            <img id="rts_image" src="assets/images/grocery/16.png" alt="Profile-NFT">
-                            <span>Drag and drop Image</span>
-                        </div>
-                        <div class="button-area">
-                            <div class="brows-file-wrapper">
-                                <!-- actual upload which is hidden -->
-                                <input name="rts_images1" id="rts_images1" type="file">
-                                <!-- our custom upload button -->
-                            </div>
+        <div class="single-input">
+            <label for="Two">Regular Price</label>
+            <input type="text" id="Two" placeholder="240">
+        </div>
+        <div class="single-input">
+            <label for="sale">Sale Price</label>
+            <input type="text" id="sale" placeholder="$250">
+        </div>
+        <div class="single-input">
+            <label for="Stock">Stock</label>
+            <input type="text" id="Stock" placeholder="530">
+        </div>
+        <div class="single-input">
+            <label for="sku">SKU</label>
+            <input type="text" id="sku" placeholder="3245">
+        </div>
+        <div class="single-input">
+            <label for="cate">Category</label>
+            <input type="text" id="cate" placeholder="Notebook">
+        </div>
+        <div class="single-input">
+            <label for="Tag">Tag</label>
+            <input type="text" id="Tag" placeholder="Iphone, Mobile">
+        </div>
+        <div class="single-input">
+            <label for="text">Description</label>
+            <textarea name="text" id="text" placeholder="Type something"></textarea>
+        </div>
+        <div class="single-input">
+            <div class="file-upload-add-product">
+                <div class="profile-left">
+                    <div class="profile-image mb--30">
+                        <img id="rts_image" src="assets/images/grocery/16.png" alt="Profile-NFT">
+                        <span>Drag and drop Image</span>
+                    </div>
+                    <div class="button-area">
+                        <div class="brows-file-wrapper">
+                            <!-- actual upload which is hidden -->
+                            <input name="rts_images1" id="rts_images1" type="file">
+                            <!-- our custom upload button -->
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="button-area-botton-wrapper-p-list">
-                <button class="rts-btn btn-primary">Save</button>
-                <button class="rts-btn btn-primary bg-transparent">Cancel</button>
-            </div>
+        </div>
+        <div class="button-area-botton-wrapper-p-list">
+            <button class="rts-btn btn-primary">Save</button>
+            <button class="rts-btn btn-primary bg-transparent">Cancel</button>
         </div>
     </div>
+</div>
 
 
 
-    <!-- all plugins js here -->
-    <script src="assets/js/plugins.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.27.0/dist/apexcharts.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-    <!-- main js Custom -->
-    <script src="assets/js/main.js"></script>
-    <!-- rts header area end -->
+<!-- all plugins js here -->
+<script src="assets/js/plugins.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/apexcharts@3.27.0/dist/apexcharts.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+<!-- main js Custom -->
+<script src="assets/js/main.js"></script>
+  <!-- rts header area end -->
 </body>
-
 </html>
