--- a/profile-setting.html
+++ b/profile-setting.html
@@ -63,6 +63,18 @@
         <!-- single menu item -->
         <li class="single-menu-item">
             <a href="#" class="with-plus">
+                <img src="assets/images/icons/02.svg" alt="icon" class="icon">
+                <p>Layouts</p>
+            </a>
+            <ul class="submenu mm-collapse parent-nav">
+                <li><a class="mobile-menu-link rts-customizer__btn--ltr" href="#">LTR Layour</a></li>
+                <li><a class="mobile-menu-link rts-customizer__btn--rtl" href="#">RTL Layout</a></li>
+            </ul>
+        </li>
+        <!-- signle menu item -->
+        <!-- single menu item -->
+        <li class="single-menu-item">
+            <a href="#" class="with-plus">
                 <img src="assets/images/icons/03.svg" alt="icon" class="icon">
                 <p>Add Product</p>
             </a>
